# FindPeaks

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
bindings/: CMakeLists.txt  README.md  find_peaks_wrapper.py  scipy_compare.ipynb  test_find_peaks_scipy.py
bindings/src/: py_bind_c.cpp  py_bind_cpp.cpp
examples/: usage_c.c  usage_cpp.cpp
src/c/: find_peaks.c  find_peaks.h
src/cpp/: find_peaks.cpp  find_peaks.hpp
tests/: CMakeLists.txt  test_find_peaks_c.cpp  test_find_peaks_cpp.cpp
